<resources>
    <string name="app_name">Revista Planteamientos</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_login">Iniciar Sesion</string>
    <string name="action_logout">Cerrar Sesión</string>
    <string name="action_perfil">Perfil</string>
    <string name="auth_failed">Prueba del mensaje</string>
    <string name="loading">Cargando</string>


    <!-- MENU -->
    <string name="menu_inicio">Inicio</string>
    <string name="menu_libreria">Libreria Digital</string>
    <string name="menu_articulos">Articulos</string>
    <string name="menu_quienes_somos">Quienes Somos</string>
    <string name="menu_historia">Historia</string>
    <string name="menu_contacto">Contacto</string>
    <string name="menu_more">Más</string>

    <!-- CARD -->
    <string name="card_add_favorite">Agregar a favoritos</string>
    <string name="card_ver_mas">Ver Más</string>
    <string name="filter">Filtro</string>

    <string name="menu_text">Texto</string>
    <string name="menu_voice">Nota de Voz</string>
    <string name="menu_video">Video</string>

    <string name="download_success">Descarga Terminada</string>
    <string name="download_failure">Fallo la Descarga</string>
    <string name="progress_downloading">Descargando…</string>
    <string name="success">Completado.</string>

    <string name="registro_titulo">Registro</string>

    <string name="facebook_app_id">258669091295143</string>
    <string name="fb_login_protocol_scheme">fb258669091295143</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="record">Grabar</string>
    <string name="stop">Detener</string>
    <string name="description_info">Info</string>
    <string name="permission_request">This sample needs permission for camera and audio recording.</string>
    <string name="camera_error">This device doesn\'t support Camera2 API.</string>
    <string name="intro_message">Prueba del mensaje</string>
    <string name="request_permission">Permiso de aplicacion</string>
</resources>
