<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_libreria"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_libreria" />
        <item
            android:id="@+id/nav_articulos"
            android:icon="@drawable/ic_library_books"
            android:title="@string/menu_articulos" />
    </group>

    <item android:title="@string/menu_more">
        <menu>
            <item
                android:id="@+id/nav_quienes_somos"
                android:icon="@drawable/ic_business"
                android:title="@string/menu_quienes_somos" />
            <item
                android:id="@+id/nav_contacto"
                android:icon="@drawable/ic_email"
                android:title="@string/menu_contacto" />
        </menu>
    </item>

</menu>
